# enterprise-hub

./: .env.example  .gitignore  .pre-commit-config.yaml  .resume_timestamp  48HR-EARNING-GAMEPLAN.md  AUTHORS.md  CHANGELOG.md  CHANGES_AT_A_GLANCE.txt  CLAUDE.md  CLEANUP_REPORT.md  CONTRIBUTING.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_FIXES_NEEDED.md  DEMO.md  Deploy.md  FAQ.md  GAMEPLAN  HANDOFF_FRESH_START.md  HANDOFF_NEXT_SESSION.md  HANDOFF_SWARM_MONETIZATION.md  IMPROVEMENTS_SUMMARY.md  ITINERARY  Makefile  PORTFOLIO.md  PROJECT_STATE.md  README.md  REVIEW_SUMMARY.md  SECURITY.md  SESSION_STATE.md  TESTIMONIALS.md  UI_UX_IMPROVEMENT_REPORT.md  VIDEO-SCRIPT.md  app.py  deep_agent_example.py  dev-requirements.txt  handoff_script.py  mypy_baseline.txt  pyproject.toml  pytest_output.txt  requirements.txt
.agent/workflows/: auto_screenshot_gemini.py  gemini-visuals.md
.github/workflows/: ci.yml
_archive/: README.md
_archive/documentation/: RESUME.md
_archive/internal_docs/: ACTION_PLAN_TODAY.md  CHROME_EXTENSION_FILL_GUIDE.md  CHROME_EXTENSION_PROMPTS.md  CLEANUP_ASSESSMENT_REPORT.md  DOCUMENTATION_UPDATE_REPORT.md  FIVERR_GIGS_READY.md  GEMINI_CLEANUP_PROMPT.md  HANDOFF_MONETIZATION_SESSION.md  HANDOFF_NEXT_SESSION.md  LINKEDIN_OPTIMIZATION.md  LINKEDIN_OUTREACH_TEMPLATES.md  MONETIZATION_COMPLETE_PACKAGE.md  MONETIZATION_GUIDE.md  MONETIZATION_PLAN.md  UPWORK_OPTIMIZATION_SUMMARY.md  UPWORK_PROFILE_COPY.md  UPWORK_PROFILE_COPY_V2_OPTIMIZED.md  pytest_all_unit_failures.txt  pytest_initial_failures.txt  pytest_integration_failures.txt  upwork_profile_preview.html
_archive/monetization/: LINKEDIN_POSTS_READY.md  LINKEDIN_TEMPLATES.md  OUTREACH_ACTION_PLAN.md  TESTIMONIALS.md  UPWORK_PROPOSALS_READY.md  UPWORK_TEMPLATES.md
_archive/reports/: CODE_QUALITY_REPORT.md  PRIORITY_4_COMPLETION_REPORT.md  REPO_CLEANUP_RECOMMENDATIONS.md
_archive/tools/: validate_logic.py  (+1 more)
assets/: Courses.md  DEMO-VIDEO-INSTRUCTIONS.md  QUICK_COPY_PASTE.md  SCREENSHOT-INSTRUCTIONS.md  auto_screenshot.py  capture_all_modules.py  capture_screenshots.py
docs/: ARCHITECTURE.md  MONETIZATION_EXPRESS_12HR.md  PERSONA0.md  README.md  SALES_ASSETS.md  swarm_architecture.md
modules/: README_AGENT_LOGIC.md  README_CONTENT_ENGINE.md  README_DATA_DETECTIVE.md  README_FINANCIAL_ANALYST.md  README_MARGIN_HUNTER.md  README_MARKETING_ANALYTICS.md  agent_logic.py  content_engine.py  data_detective.py  financial_analyst.py  margin_hunter.py  market_pulse.py  marketing_analytics.py  multi_agent.py  smart_forecast.py
scenarios/: README.md  ecommerce-product-template.md  manufacturing-volume-template.md  saas-pricing-template.md
tests/: __init__.py  conftest.py  test_agent_logic.py  test_data_loader.py  test_financial_analyst.py  test_imports.py  test_market_pulse.py  test_marketing_analytics.py  validate_imports.py
utils/: config.py  contrast_checker.py  data_generator.py  data_loader.py  data_source_faker.py  exceptions.py  logger.py  sales_formatter.py  sentiment_analyzer.py  ui.py
(+54 files in other folders)
